samples/_failures_safe/1761323969_340aa3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ed6bd52b.c: In function ‘main’:
./samples/SAFE/__tmp_ed6bd52b.c:148:28: error: missing terminating " character
  148 |                     printf("Compression successful: %zu -> %zu -> %zu bytes\n
      |                            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_ed6bd52b.c:148:21: error: expected expression at end of input
  148 |                     printf("Compression successful: %zu -> %zu -> %zu bytes\n
      |                     ^~~~~~
./samples/SAFE/__tmp_ed6bd52b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed6bd52b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed6bd52b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed6bd52b.c:148:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ed6bd52b.c:148:21: error: expected declaration or statement at end of input
